# ooplr5

./: CMakeLists.txt
include/: allocator.h  array.h  array.ipp  eight.h  eight.ipp  figure.h  figure.ipp  five.h  five.ipp  point.h  point.ipp  six.h  six.ipp
src/: allocator.cpp  main.cpp
test/: array_test.cpp  figure_test.cpp  test.cpp
